# rust-devops-test

./: Cargo.toml  README.md
src/: lib.rs  main.rs  provider.rs  subcommands.rs
src/provider/: s3.rs  s3_mock.rs  s3_trait.rs
src/subcommands/: deploy.rs
