# Copyright (c) 2023 Arvid Gerstmann. All rights reserved.
[package]
name = "doxyme-rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
aws-config = "0.53.0"
aws-sdk-s3 = "0.23.0"
aws-smithy-client = { version = "0.53.1", features = ["serde", "test-util"] }
aws-smithy-http = "0.53.1"
aws-smithy-types = "0.53.1"
bytes = "1.3.0"
clap = "4.1.1"
http = "0.2.8"
indicatif = "0.17.3"
log = "0.4.17"
simple_logger = "4.0.0"
tokio = { version = "1.24.2", features = ["full"] }
tracing-subscriber = "0.3.16"
